OSL Texture Mapping does not match Cycles and Eevee #69845

Closed
opened 2019-09-13 15:37:28 +02:00 by Charlie Jolly · 4 comments
Member

System Information
Operating system: Windows 10
Graphics card: Intel HD

Blender Version
Broken: 2.80 and nightly

Short description of error
OSL does not respect the input vector correctly. When adding a constant value the input seems to be overridden by the node.

Exact steps for others to reproduce the error
Add a constant value to the input vector on a texture node and then connect the texture to the output node.
See attached images and blend file.

image.png
image.png
osl.blend

**System Information** Operating system: Windows 10 Graphics card: Intel HD **Blender Version** Broken: 2.80 and nightly **Short description of error** OSL does not respect the input vector correctly. When adding a constant value the input seems to be overridden by the node. **Exact steps for others to reproduce the error** Add a constant value to the input vector on a texture node and then connect the texture to the output node. See attached images and blend file. ![image.png](https://archive.blender.org/developer/F7744920/image.png) ![image.png](https://archive.blender.org/developer/F7744946/image.png) [osl.blend](https://archive.blender.org/developer/F7744944/osl.blend)
Author
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly

This issue was referenced by blender/cycles@f35aa4b47c

This issue was referenced by blender/cycles@f35aa4b47ca8635275be32439fbfdc187dc4e3d3

This issue was referenced by 6528fcaeea

This issue was referenced by 6528fcaeea6243c376699b987e1770ed155e19ae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-11-06 20:24:27 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69845
No description provided.