Fix T69845: OSL wrong texture node output for fixed vector value